# code-execution

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN.md  README.md  conftest.py  main.py  pyproject.toml  test_cpp.py  test_server.py
scripts/: build_and_run.sh  delete_snapshots.sh  deploy_to_cloud_run.sh  run_tests.sh  run_tests_local.sh
src/code_execution/: __init__.py  types.py
src/code_execution/languages/: __init__.py  base.py  cpp.py  python.py
tests/: test_cloudrun.py  test_cloudrun_noauth.py  test_cloudrun_noauth_python.py  test_codecontests.py  test_parallel.py  test_python_execution.py  test_server  test_server.py
