[project]
name = "code-execution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "morphcloud>=0.1.32",
    "pydantic>=2.11.1",
    "pyright>=1.1.398",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "uvicorn>=0.34.0",
]
