[project]
name = "code-execution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "fastapi>=0.115.12",
    "gunicorn>=23.0.0",
    "morphcloud>=0.1.32",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.1",
    "pyright>=1.1.398",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "uvicorn>=0.34.0",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.1.0",
    "google-cloud-run>=0.10.17",
]
